# bootc

./: .bootc-dev-infra-commit.txt  .dockerignore  .packit.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cfsuki  Justfile  MAINTAINERS.md  Makefile
.devcontainer/: devcontainer.json
.gemini/: config.yaml
.github/: labeler.yml
.github/actions/bootc-ubuntu-setup/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-review.yml  autovendor.yml  build-and-publish.yml  ci.yml  docs.yml  integration.yml  openssf-scorecard.yml  rebase.yml  release.yml  scheduled-release.yml
contrib/packaging/: bootc.spec  build-rpm  configure-rootfs  configure-variant  fedora-extra.txt  install-buildroot  install-rpm-and-setup
crates/blockdev/src/: blockdev.rs
crates/cli/: Cargo.toml
crates/etc-merge/: Cargo.toml
crates/etc-merge/src/: lib.rs
crates/imagectl/: Cargo.toml
crates/imagectl/src/: build_rootfs.rs  cli.rs  constants.rs  lib.rs  list.rs  lockfile.rs  manifest.rs  rechunk.rs
crates/initramfs/: Cargo.toml
crates/initramfs/dracut/: module-setup.sh
crates/initramfs/src/: lib.rs  main.rs  mount.rs
crates/kernel_cmdline/: Cargo.toml
crates/kernel_cmdline/src/: bytes.rs  lib.rs  utf8.rs
crates/lib/: Cargo.toml
crates/lib/src/: bootc_kargs.rs  bootloader.rs  boundimage.rs  cfsctl.rs  cli.rs  cli_json.rs  composefs_consts.rs  deploy.rs  discoverable_partition_specification.rs  fsck.rs  generator.rs  image.rs  install.rs  kernel.rs  lib.rs  lints.rs  lsm.rs  podstorage.rs  progress_jsonl.rs  spec.rs  status.rs  utils.rs
crates/mount/: Cargo.toml
crates/mount/src/: mount.rs  tempmount.rs
crates/ostree-ext/: Cargo.toml
crates/ostree-ext/src/: chunking.rs  cli.rs  fixture.rs  generic_decompress.rs  globals.rs  integrationtest.rs  repair.rs  sysroot.rs
crates/system-reinstall-bootc/: Cargo.toml
crates/system-reinstall-bootc/src/: btrfs.rs  lvm.rs  main.rs  podman.rs  prompt.rs  users.rs
crates/sysusers/src/: lib.rs
crates/tests-integration/: Cargo.toml
crates/tests-integration/src/: composefs_bcvk.rs  container.rs  install.rs  system_reinstall.rs  tests-integration.rs
crates/tmpfiles/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: command.rs  lib.rs  path.rs  tracing_util.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: man.rs  tmt.rs  xtask.rs
docs/: Dockerfile.mdbook
docs/src/: SUMMARY.md  bootc-install.md  bootloaders.md  experimental-composefs.md  host-v1.schema.json  progress-v0.schema.json  registries-and-offline.md  upgrades.md
docs/src/man/: bootc-container-inspect.8.md  bootc-container-lint.8.md  bootc-container-lint.md  bootc-container.8.md  bootc-container.md  bootc-edit.8.md  bootc-edit.md  bootc-fetch-apply-updates.service.5.md  bootc-install-config.5.md  bootc-install-ensure-completion.8.md  bootc-install-ensure-completion.md  bootc-install-finalize.8.md  bootc-install-finalize.md  bootc-install-print-configuration.8.md  bootc-install-print-configuration.md  bootc-install-to-disk.8.md  bootc-install-to-disk.md  bootc-install-to-existing-root.8.md  bootc-install-to-existing-root.md  bootc-install-to-filesystem.8.md  bootc-install-to-filesystem.md  bootc-install.8.md  bootc-install.md  bootc-rollback.8.md  bootc-rollback.md  bootc-root-setup.service.5.md  bootc-status-updated.path.5.md  bootc-status-updated.target.5.md  bootc-status.8.md  bootc-status.md  bootc-switch.8.md  bootc.8.md  (+6 more)
examples/bootc-bls/: Containerfile  build
examples/bootc-uki/: Containerfile.stage1  Containerfile.stage2  build.base  build.final
hack/: Containerfile  Containerfile.drop-lbis  Containerfile.packit  os-image-map.json  packit-reboot.yml  provision-derived.sh  provision-packit.sh  system-reinstall-bootc.exp
lib/src/: blockdev.rs  cli.rs  deploy.rs  install.rs  kernel.rs  lib.rs  lints.rs  podman.rs  spec.rs  status.rs  utils.rs
ostree-ext/: Cargo.toml
tests/: build-sealed  build.sh  run-tmt.sh  test.sh
tmt/plans/: bootc-integration.fmf  integration.fmf
tmt/tests/: Dockerfile.upgrade  test-23-usroverlay.fmf  test-26-examples-build.fmf  test-27-custom-selinux-policy.fmf  test-28-factory-reset.fmf  test-29-soft-reboot-selinux-policy.fmf  tests.fmf
(+63 files in other folders)
