[package]
name = "bootc-initramfs-setup"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["std", "help", "usage", "derive"] }
libc.workspace = true
rustix.workspace = true
serde = { workspace = true, features = ["derive"] }
composefs.workspace = true
composefs-boot.workspace = true
toml.workspace = true
fn-error-context.workspace = true

[lints]
workspace = true

[features]
default = ['pre-6.15']
rhel9 = ['composefs/rhel9']
'pre-6.15' = ['composefs/pre-6.15']
