[package]
name = "bootc-kernel-cmdline"
description = "Kernel command line parsing utilities for bootc"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bootc-dev/bootc"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[lints]
workspace = true